--- a/input.scss
+++ b/input.scss
@@ -175,7 +175,7 @@ main {
   padding-bottom: 5rem;
   padding-top: 2rem;
   @include respond-to("xs") {
-    padding: 32px 16px;
+    padding: 0 16px 32px 16px;
     font-size: 15px;
   }
 }
@@ -455,11 +455,11 @@ body::-webkit-scrollbar-thumb {
 // ********* HOME
 
 .hero {
-  @include respond-to("xs") {
-    h1 {
-      padding-top: 0;
-    }
-  }
+  // @include respond-to("xs") {
+  //   h1 {
+  //     padding-top: 0;
+  //   }
+  // }
   .hero--picture {
     width: 100%;
   }
@@ -591,7 +591,7 @@ body::-webkit-scrollbar-thumb {
   padding-top: 32px;
   display: flex;
   justify-content: space-around;
-  gap: 24px;
+  gap: 2.5rem;
   @include respond-to("xs") {
     flex-direction: column;
   }
@@ -605,9 +605,13 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   justify-content: space-between;
   @include respond-to("xs") {
+    font-size: 16px;
     margin: 1rem 0;
     &:first-child {
       margin: 0;
+    }
+    img {
+      padding-top: 0;
     }
   }
   @include big-shadow();
@@ -615,11 +619,15 @@ body::-webkit-scrollbar-thumb {
     font-size: 1.5em;
     font-weight: 600;
     text-align: center;
-    color: rgb(88, 92, 93);
     height: 50px;
+    margin-top: 10px;
   }
   .product--content--list {
     flex: 1;
+    padding-left: 1.3em;
+    @include respond-to("xs") {
+      padding-left: 1.1em;
+    }
   }
   .product--price {
     font-size: 1.2em;
@@ -644,10 +652,15 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+.product--item {
+  line-height: 1.4em;
+  color: #545856;
+}
+
 .product > * {
-  padding: 1rem;
+  padding: 0.7rem 1.5rem;
   @include respond-to("xs") {
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -675,7 +688,7 @@ h1 {
     font-size: 25px;
     line-height: 30px;
     text-align: center;
-    padding: 1em 0;
+    padding: 0.7em 0;
   }
 }
 
@@ -880,7 +893,7 @@ label {
   font-size: 1.1em;
   font-weight: 500;
   @include respond-to("xs") {
-    margin: 0.3rem 0;
+    margin-top: 1.2rem;
   }
 }
 
