--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ main {
 }
 @media (max-width: 576px) {
   main {
-    padding: 32px 16px;
+    padding: 0 16px 32px 16px;
     font-size: 15px;
   }
 }
@@ -562,11 +562,6 @@ body::-webkit-scrollbar-thumb {
   background: rgb(245, 213, 20);
 }
 
-@media (max-width: 576px) {
-  .hero h1 {
-    padding-top: 0;
-  }
-}
 .hero .hero--picture {
   width: 100%;
 }
@@ -703,7 +698,7 @@ body::-webkit-scrollbar-thumb {
   padding-top: 32px;
   display: flex;
   justify-content: space-around;
-  gap: 24px;
+  gap: 2.5rem;
 }
 @media (max-width: 576px) {
   .products {
@@ -725,21 +720,31 @@ body::-webkit-scrollbar-thumb {
 }
 @media (max-width: 576px) {
   .product {
+    font-size: 16px;
     margin: 1rem 0;
   }
   .product:first-child {
     margin: 0;
+  }
+  .product img {
+    padding-top: 0;
   }
 }
 .product .product--title {
   font-size: 1.5em;
   font-weight: 600;
   text-align: center;
-  color: rgb(88, 92, 93);
   height: 50px;
+  margin-top: 10px;
 }
 .product .product--content--list {
   flex: 1;
+  padding-left: 1.3em;
+}
+@media (max-width: 576px) {
+  .product .product--content--list {
+    padding-left: 1.1em;
+  }
 }
 .product .product--price {
   font-size: 1.2em;
@@ -765,12 +770,17 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+.product--item {
+  line-height: 1.4em;
+  color: #545856;
+}
+
 .product > * {
-  padding: 1rem;
+  padding: 0.7rem 1.5rem;
 }
 @media (max-width: 576px) {
   .product > * {
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -796,7 +806,7 @@ h1 {
     font-size: 25px;
     line-height: 30px;
     text-align: center;
-    padding: 1em 0;
+    padding: 0.7em 0;
   }
 }
 
@@ -1027,7 +1037,7 @@ label {
 }
 @media (max-width: 576px) {
   label {
-    margin: 0.3rem 0;
+    margin-top: 1.2rem;
   }
 }
 
