--- a/input.scss
+++ b/input.scss
@@ -672,7 +672,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 // ********** BSR
-
 h1 {
   font-family: "TT Norms";
   font-style: normal;
@@ -680,8 +679,6 @@ h1 {
   font-size: 50px;
   line-height: 157.5%;
   padding: 2.5rem 0;
-  /* or 79px */
-
   text-align: center;
   @include respond-to("xs") {
     font-weight: 700;
@@ -702,67 +699,132 @@ p {
 }
 
 .bsr--content {
-  display: flex;
-  img {
-    order: 2;
-    flex: 1;
-    width: 50%;
-  }
-  padding: 1.5rem 3rem;
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
+
   @include respond-to("xs") {
-    display: block;
+    grid-template-columns: 1fr;
   }
 }
 
-.events {
-  display: inline-grid;
-  grid-template-columns: repeat(3, minmax(200px, 1fr));
-  // overflow-x: hidden;
+.events--flex {
+  display: flex;
+}
+
+.year {
+  display: flex;
+  justify-content: space-between;
+}
+
+.event--2023 {
+  grid-row-start: 3;
+  border: 10px solid goldenrod;
 }
 
 .event {
   @include big-shadow();
   margin: 2em 0.3em;
-  img {
-    width: fit-content;
-    border-radius: 10px;
-  }
   position: relative;
+  flex: 1 0 100%;
+  background-color: rgb(233, 233, 233);
+  h2 {
+    padding: 0.1em 0.7em;
+  }
+  img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+  }
+  @include respond-to("xs") {
+    margin: 1em 0.3em;
+  }
 }
 
-.event--2023::after,
-.event::before {
+.carousel::before,
+.carousel::after,
+.carousel__prev,
+.carousel__next {
   position: absolute;
-  font-family: "TT Norms";
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 21px;
-  top: -30px;
+  top: 0;
+  margin-top: 37.5%;
+  width: 4rem;
+  height: 4rem;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  font-size: 0;
+  outline: 0;
 }
 
-.event--2023::before {
-  content: "2023";
-  left: 0;
+.carousel::before,
+.carousel__prev {
+  left: -1rem;
 }
 
-.event--2023::after {
-  content: "A venir";
-  left: 100%;
-  width: 100px;
+.carousel::after,
+.carousel__next {
+  right: -1rem;
 }
 
-.event--2022::before {
-  content: "2022";
-  left: 0;
+.carousel::before,
+.carousel::after {
+  content: " e";
+  z-index: 1222;
+  background-color: #333;
+  background-size: 1.5rem 1.5rem;
+
+  background-repeat: no-repeat;
+  background-position: center center;
+  color: #fff;
+  font-size: 2.5rem;
+  line-height: 4rem;
+  text-align: center;
+  pointer-events: none;
 }
 
-.event--2022::after {
-  content: "A venir";
+.carousel::before {
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.carousel::after {
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.line-through {
   text-decoration: line-through;
-  left: calc(100vw - 100px);
-  width: 100px;
 }
+
+// .event--2023::after,
+// .event::before {
+//   position: absolute;
+//   font-family: "TT Norms";
+//   font-style: normal;
+//   font-weight: 300;
+//   font-size: 18px;
+//   line-height: 21px;
+//   top: -30px;
+// }
+
+// .event--2023::before {
+//   content: "2023";
+//   left: 0;
+// }
+
+// .event--2023::after {
+//   content: "A venir";
+//   left: 100%;
+//   width: 100px;
+// }
+
+// .event--2022::before {
+//   content: "2022";
+//   left: 0;
+// }
+
+// .event--2022::after {
+//   content: "A venir";
+//   text-decoration: line-through;
+//   left: calc(100vw - 100px);
+//   width: 100px;
+// }
 
 // *************** CONTACT
 
