--- a/style.css
+++ b/style.css
@@ -563,7 +563,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .hero .hero--picture {
+  background-color: #000;
+  border: 3px solid #000000;
+  box-shadow: 4px 4px 0px #000000;
+  border-radius: 10px;
   width: 100%;
+  margin: 2.5rem 0;
 }
 .hero figure {
   position: relative;
@@ -574,13 +579,13 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 100px;
   left: 0px;
-  top: calc(100% - 110px);
+  top: calc(100% - 149px);
   background: rgba(16, 16, 16, 0.2);
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
 }
 @media (max-width: 576px) {
   .hero figcaption {
-    top: calc(100% - 66px);
+    top: calc(100% - 110px);
     height: 62px;
     background: none;
   }
@@ -616,13 +621,13 @@ body::-webkit-scrollbar-thumb {
 
 .description {
   display: grid;
-  padding: 0 40px;
+  padding: 0 0.3rem;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   font-size: 16px;
   line-height: 165%;
   font-family: kohinoor-medium;
-  margin-bottom: 40px;
+  margin-bottom: 1rem;
   font-size: 18px;
 }
 @media (max-width: 576px) {
@@ -823,15 +828,21 @@ p {
 .bsr--content {
   display: grid;
   grid-template-columns: 1.3fr 1fr;
+  gap: 3rem;
 }
 @media (max-width: 576px) {
   .bsr--content {
     grid-template-columns: 1fr;
+    gap: 0;
   }
 }
 
 .events--flex {
   display: flex;
+}
+
+.event__snapper {
+  cursor: pointer;
 }
 
 .year {
@@ -893,7 +904,7 @@ p {
 
 .carousel::before,
 .carousel::after {
-  content: " e";
+  content: "";
   z-index: 1222;
   background-color: #333;
   background-size: 1.5rem 1.5rem;
@@ -1115,10 +1126,17 @@ label {
   }
 }
 
+.farm--container img, .campagna-e-vita img, .el-caporalato img {
+  box-shadow: 2px 2px 0px 0px rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  background-color: #000;
+}
+
 .casalina--container {
   display: grid;
   grid-template-columns: 1.3fr 1fr;
-  gap: 2rem;
+  gap: 3rem;
 }
 .casalina--container .casalina--text {
   margin-top: 1rem;
@@ -1231,6 +1249,121 @@ label {
     margin: 0.4rem 10%;
     width: 80%;
   }
+}
+
+* {
+  box-sizing: border-box;
+  scrollbar-color: transparent transparent; /* thumb and track color */
+  scrollbar-width: 0px;
+}
+
+*::-webkit-scrollbar {
+  width: 0;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: transparent;
+  border: none;
+}
+
+* {
+  -ms-overflow-style: none;
+}
+
+ol, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.carousel {
+  border: 3px solid #000000;
+  box-shadow: 4px 4px 0px #000000;
+  border-radius: 10px;
+}
+
+.carousel__viewport {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 5px;
+  display: flex;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+
+.carousel__slide {
+  position: relative;
+  flex: 0 0 100%;
+  width: 100%;
+  background-color: #f99;
+}
+.carousel__slide h2 {
+  padding-left: 0.5em;
+}
+.carousel__slide h2:nth-child(2n) {
+  font-weight: 700;
+}
+.carousel__slide h2:nth-child(odd) {
+  color: rgb(97, 101, 99);
+}
+.carousel__slide img {
+  position: relative;
+  top: -2px;
+  width: 100%;
+  z-index: 1;
+}
+
+.carousel__slide:nth-child(even) {
+  background-color: #99f;
+}
+
+.carousel__slide:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -40%, 70px);
+  color: #fff;
+  font-size: 2em;
+}
+
+.carousel__snapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: center;
+}
+
+.carousel__prev,
+.carousel__next {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  margin-top: 37.5%;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  font-size: 0;
+  outline: 0;
+}
+
+.carousel::before,
+.carousel__prev {
+  left: -1rem;
+}
+
+.carousel::after,
+.carousel__next {
+  right: -1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
