--- a/input.scss
+++ b/input.scss
@@ -703,6 +703,10 @@ p {
   }
 }
 
+section.bsr {
+  margin-bottom: 1rem;
+}
+
 .bsr--content {
   display: grid;
   grid-template-columns: 1.3fr 1fr;
@@ -717,9 +721,11 @@ p {
   display: flex;
 }
 
-.event__snapper {
-  cursor: pointer;
+.events {
+  margin-bottom: 10rem;
 }
+
+
 
 .year {
   display: flex;
@@ -749,91 +755,13 @@ p {
   }
 }
 
-.carousel::before,
-.carousel::after,
-.carousel__prev,
-.carousel__next {
-  position: absolute;
-  top: 0;
-  margin-top: 37.5%;
-  width: 4rem;
-  height: 4rem;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  font-size: 0;
-  outline: 0;
-}
-
-.carousel::before,
-.carousel__prev {
-  left: -1rem;
-}
-
-.carousel::after,
-.carousel__next {
-  right: -1rem;
-}
-
-.carousel::before,
-.carousel::after {
-  content: "";
-  z-index: 1222;
-  background-color: #333;
-  background-size: 1.5rem 1.5rem;
-  background-repeat: no-repeat;
-  background-position: center center;
-  color: #fff;
-  font-size: 2.5rem;
-  line-height: 4rem;
-  text-align: center;
-  pointer-events: none;
-}
-
-.carousel::before {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.carousel::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-}
 
 .line-through {
   text-decoration: line-through;
 }
 
-// .event--2023::after,
-// .event::before {
-//   position: absolute;
-//   font-family: "TT Norms";
-//   font-style: normal;
-//   font-weight: 300;
-//   font-size: 18px;
-//   line-height: 21px;
-//   top: -30px;
-// }
 
-// .event--2023::before {
-//   content: "2023";
-//   left: 0;
-// }
 
-// .event--2023::after {
-//   content: "A venir";
-//   left: 100%;
-//   width: 100px;
-// }
-
-// .event--2022::before {
-//   content: "2022";
-//   left: 0;
-// }
-
-// .event--2022::after {
-//   content: "A venir";
-//   text-decoration: line-through;
-//   left: calc(100vw - 100px);
-//   width: 100px;
-// }
 
 // *************** CONTACT
 
@@ -920,13 +848,13 @@ p {
     top: 4px;
   }
 }
-
+ 
 .contact--phone::before {
   content: url(./assets//images/icons/phone.svg);
   @include respond-to("xs") {
     content: url(./assets/images/icons/phone_sm.svg);
   }
-}
+} 
 
 .contact--info {
   display: grid;
@@ -935,7 +863,7 @@ p {
   align-items: center;
   @include respond-to("xs") {
     grid-template-columns: auto;
-  }
+  } 
 }
 
 input,
@@ -1134,22 +1062,20 @@ label {
 
 
 
-* {
-  box-sizing: border-box;
-  scrollbar-color: transparent transparent; /* thumb and track color */
-  scrollbar-width: 0px;
-}
+
 
 *::-webkit-scrollbar {
   width: 0;
+  height: 0;
 }
 
 *::-webkit-scrollbar-track {
-  background: transparent;
+  background: black;
 }
 
 *::-webkit-scrollbar-thumb {
-  background: transparent;
+  background: rgb(179, 245, 211);
+  border-radius: 5px;
   border: none;
 }
 
@@ -1164,10 +1090,9 @@ ol, li {
 }
 
 .carousel {
-  // position: relative;
-  // padding-top: 75%;
-  // perspective: 100px;
-  @include big-shadow();
+  position: relative;
+  padding-top: 75%;
+  perspective: 100px;
 }
 
 .carousel__viewport {
@@ -1178,16 +1103,22 @@ ol, li {
   left: 0;
   border-radius: 5px;
   display: flex;
-  overflow-x: hidden;
+  overflow-x: scroll;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
 }
 
 .carousel__slide {
-  position: relative;
-  flex: 0 0 100%;
-  width: 100%;
-  background-color: #f99;
+  @include big-shadow();
+  margin: 1rem 1rem;
+  height: fit-content;
+  border-radius: 5px;
+  background-color: white;
+  @include respond-to('xs') {
+    position: relative;
+    flex: 0 0 75%;
+    scroll-snap-align: start;
+  }
   h2 {
     padding-left: .5em;
   }
@@ -1199,15 +1130,14 @@ ol, li {
     }
   img {
     position: relative;
+    border-radius: 5px 5px 0 0;
     top: -2px;
     width: 100%;
     z-index: 1;
   }
 }
 
-.carousel__slide:nth-child(even) {
-  background-color: #99f;
-}
+
 
 .carousel__slide:before {
   position: absolute;
@@ -1218,30 +1148,7 @@ ol, li {
   font-size: 2em;
 }
 
-.carousel__snapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  scroll-snap-align: center;
-}
 
-
-// @media (prefers-reduced-motion: reduce) {
-//   .carousel__snapper {
-//     animation-name: none;
-//   }
-// }
-
-
-// .carousel:hover .carousel__snapper,
-// .carousel:focus-within .carousel__snapper {
-//   animation-name: none;
-// }
-
-// .carousel::before,
-// .carousel::after,
 .carousel__prev,
 .carousel__next {
   position: absolute;
@@ -1255,34 +1162,4 @@ ol, li {
   outline: 0;
 }
 
-.carousel::before,
-.carousel__prev {
-  left: -1rem;
-}
 
-.carousel::after,
-.carousel__next {
-  right: -1rem;
-}
-
-// .carousel::before,
-// .carousel::after {
-//   content: '';
-//   z-index: 5;
-//   background-color:#ced0cf;
-//   background-size: 1.5rem 1.5rem;
-//   background-repeat: no-repeat;
-//   background-position: center center;
-//   font-size: 2.5rem;
-//   line-height: 4rem;
-//   text-align: center;
-//   pointer-events: none;
-// }
-
-// .carousel::before {
-//   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-// }
-
-// .carousel::after {
-//   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-// }
