--- a/input.scss
+++ b/input.scss
@@ -19,9 +19,9 @@ $gray: rgba(97, 101, 99, 1);
 }
 
 @mixin big-shadow {
-  border: 3px solid #000000;
-  box-shadow: 4px 4px 0px #000000;
-  border-radius: 10px;
+  // border: 3px solid #000000;
+  // box-shadow: 4px 4px 0px #000000;
+  // border-radius: 10px;
 }
 
 :root {
@@ -134,7 +134,6 @@ $gray: rgba(97, 101, 99, 1);
   --bs-box-shadow: 0 0.5rem 1rem rgba(var(--bs-body-color-rgb), 0.15);
   --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(var(--bs-body-color-rgb), 0.075);
   --bs-box-shadow-lg: 0 1rem 3rem rgba(var(--bs-body-color-rgb), 0.175);
-  --bs-box-shadow-inset: inset 0 1px 2px rgba(var(--bs-body-color-rgb), 0.075);
   --bs-emphasis-color: #000;
   --bs-form-control-bg: var(--bs-body-bg);
   --bs-form-control-disabled-bg: var(--bs-secondary-bg);
@@ -936,12 +935,12 @@ label {
   }
 }
 
-.farm--container,.campagna-e-vita,.el-caporalato {
-  img {
-    @include shadow();
-    background-color: #000;
-  }
-}
+// .farm--container,.campagna-e-vita,.el-caporalato {
+//   img {
+//     @include shadow();
+//     background-color: #000;
+//   }
+// }
 
 .casalina--container {
   display: grid;
